Add add-opens for test tasks